<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"

    tools:context=".TerminErstellung">


    <EditText
        android:id="@+id/txt_Terminerstellung_Eingabe_Titel"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/schwarz"
        android:padding="10dp"

        android:gravity="center"
        android:hint="@string/titel"
        android:textSize="20sp"
        android:textColor="@color/weiß"
        android:textColorHint="@color/weiß"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_Terminerstellung_Eingabe_JaNein"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/schwarz"/>

        <TextView
            android:id="@+id/txt_Terminerstellung_Beschriftung_Ganztaegig"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:gravity="start"
            android:text="@string/ganztaegig"
            android:textColor="@color/grau"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Terminerstellung_Beschriftung_Start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/start"
                android:textColor="@color/schwarz"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/txt_Terminerstellung_Eingabe_Datum_Start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"

                android:inputType="date"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/datum"
                android:textColor="@color/grau"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/txt_Terminerstellung_Eingabe_Zeit_Start"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="time"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/zeit"
                android:textColor="@color/grau"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_Terminerstellung_Beschriftung_Ende"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:text="@string/ende"
                android:textColor="@color/schwarz"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txt_Terminerstellung_Eingabe_Datum_Ende"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"

                android:inputType="date"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/datum"
                android:textColor="@color/grau"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/txt_Terminerstellung_Eingabe_Zeit_Ende"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:inputType="time"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/zeit"
                android:textColor="@color/grau"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_Terminerstellung_Abbrechen"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/schwarz"

            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/abbrechen"
            android:textColor="@color/weiß"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_Terminerstellung_Speichern"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:background="@color/schwarz"

            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:text="@string/speichern"
            android:textColor="@color/weiß"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_Gespeichert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>


</LinearLayout>